--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-reveal": "^1.2.2",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
